<resources>
    <string name="app_name">Houses</string>
    <string name="action_settings">Settings</string>
    <string name="favorite">Favorite</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="search">Search</string>
    <string name="share">Share</string>
    <string name="filter">Filter</string>
    <string name="home">Home</string>
    <string name="apply">Apply</string>
    <string name="open_navigation_drawer">Open</string>
    <string name="close_navigation_drawer">Close</string>
    <string name="terms">Terms and Conditions</string>
    <string name="help">Help</string>
    <string name="facebook_app_id">1310947972379580</string>
    <string name="fb_login_protocol_scheme">fb1310947972379580</string>

    <!-- Error Message -->
    <string name="error_loading">Could not fetch houses 😰!</string>
    <string name="error_no_results">No Houses found 😔</string>
    <string name="has_barbecue">Has Barbecue</string>
    <string name="has_garage">Has Garage</string>

    <string name="room_1">1</string>
    <string name="room_2">2</string>
    <string name="room_3">3</string>
    <string name="room_4">4</string>

    <string name="view">View</string>

    <string name="total">total</string>
    <string name="roomsQuantity">rooms</string>
    <string name="contact">Contact</string>
    <string name="call">Call</string>

    <string name="add_to_favorite">Add to Favorite</string>
    <string name="favorite_desc">Favorite House</string>
    <string name="share_desc">Share House</string>
    <string name="features">Features</string>
    <string name="total_area">Total Area:</string>
    <string name="bedrooms">Bedrooms:</string>
    <string name="bathrooms">Bathrooms:</string>
    <string name="location">Location</string>
</resources>
