<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home_item"
            android:icon="@drawable/baseline_home_24"
            android:title="@string/home"
        />
        <item
            android:id="@+id/favorite_item"
            android:icon="@drawable/baseline_favorite_border_24"
            android:title="@string/favorite"
            android:visible="false"
            />
        <item
            android:id="@+id/login_item"
            android:icon="@drawable/settings"
            android:title="@string/login"
            />
        <item
            android:id="@+id/logout_item"
            android:icon="@drawable/settings"
            android:title="@string/logout"
            android:visible="false"
            />
        <item
            android:id="@+id/settings_item"
            android:icon="@drawable/settings"
            android:title="@string/action_settings"
            />
        <item
            android:id="@+id/terms_item"
            android:icon="@drawable/baseline_text_fields_24"
            android:title="@string/terms"
            />
        <item
            android:id="@+id/help_video_item"
            android:icon="@drawable/baseline_text_fields_24"
            android:title="@string/help"
            />
    </group>
</menu>