<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group
        android:id="@+id/main_menu_group"
        android:checkableBehavior="single">
        <item
            android:id="@+id/filter_action_item"
            android:icon="@drawable/baseline_tune_24"
            android:title="@string/filter"
            app:showAsAction="always" />
        <item
            android:id="@+id/search_action_item"
            android:icon="@drawable/baseline_search_24"
            android:title="@string/search"
            app:actionViewClass="android.support.v7.widget.SearchView"
            app:showAsAction="always|collapseActionView" />

        <item
            android:id="@+id/view_action_item"
            android:icon="@drawable/baseline_view_headline_24"
            android:title="@string/view"
            app:showAsAction="always" />

    </group>
</menu>