<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/scrollViewDetail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:scrollbars="none">

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/bottom_detail"
        tools:context=".ui.housedetail.HouseDetailFragment">

        <android.support.v4.view.ViewPager
            android:id="@+id/viewPagerHouseDetailPhotos"
            android:layout_width="match_parent"
            android:layout_height="@dimen/photo_image_view_height"
            android:layout_marginBottom="@dimen/margin_bottom_photo_profile"
            app:layout_constraintTop_toTopOf="parent" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline_vertical"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.05" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline_vertical_middle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".5" />

        <TextView
            android:id="@+id/subtitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@id/guideline_vertical"
            app:layout_constraintTop_toBottomOf="@id/viewPagerHouseDetailPhotos" />

        <TextView
            android:id="@+id/title"
            style="@style/houseTitleDetail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/guideline_vertical"
            app:layout_constraintTop_toBottomOf="@id/subtitle" />

        <TextView
            android:id="@+id/price"
            style="@style/housePriceDetail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/guideline_vertical"
            app:layout_constraintTop_toBottomOf="@id/title" />

        <ImageView
            android:id="@+id/favorite_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top_detail_sections"
            android:contentDescription="@string/favorite_desc"
            android:src="@drawable/baseline_favorite_border_24"
            app:layout_constraintEnd_toStartOf="@+id/share_button"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/price" />

        <ImageView
            android:id="@+id/share_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="@dimen/margin_top_detail_sections"
            android:contentDescription="@string/share_desc"
            android:src="@drawable/baseline_share_24"
            app:layout_constraintEnd_toStartOf="@+id/call_button"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/favorite_button"
            app:layout_constraintTop_toBottomOf="@id/price" />

        <ImageView
            android:id="@+id/call_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="@dimen/margin_top_detail_sections"
            android:contentDescription="@string/share_desc"
            android:src="@drawable/baseline_call_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/share_button"
            app:layout_constraintTop_toBottomOf="@id/price" />

        <View
            android:id="@+id/location_section"
            android:layout_width="match_parent"
            android:layout_height=".5dp"
            android:layout_marginTop="@dimen/margin_top_detail_sections"
            android:background="@color/dividerSections"
            app:layout_constraintTop_toBottomOf="@id/call_button" />

        <TextView
            android:id="@+id/location_title"
            style="@style/detailTitleSections"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/location"
            app:layout_constraintStart_toEndOf="@id/guideline_vertical"
            app:layout_constraintTop_toBottomOf="@id/location_section" />

        <com.google.android.gms.maps.MapView
            android:id="@+id/map_view"
            android:layout_width="match_parent"
            android:layout_height="@dimen/map_detail_height"
            android:layout_marginTop="@dimen/margin_top_detail_sections"
            app:layout_constraintTop_toBottomOf="@id/location_title" />

        <View
            android:id="@+id/feature_section"
            android:layout_width="match_parent"
            android:layout_height=".5dp"
            android:layout_marginTop="@dimen/margin_top_detail_sections"
            android:background="@color/dividerSections"
            app:layout_constraintTop_toBottomOf="@id/map_view" />

        <TextView
            android:id="@+id/feature_title"
            style="@style/detailTitleSections"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/features"
            app:layout_constraintStart_toEndOf="@id/guideline_vertical"
            app:layout_constraintTop_toBottomOf="@id/feature_section" />

        <TextView
            android:id="@+id/total_area"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_area"
            app:layout_constraintStart_toEndOf="@id/guideline_vertical"
            app:layout_constraintTop_toBottomOf="@id/feature_title" />

        <TextView
            android:id="@+id/total_area_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/guideline_vertical"
            app:layout_constraintTop_toBottomOf="@id/total_area" />

        <TextView
            android:id="@+id/bedrooms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bedrooms"
            app:layout_constraintStart_toEndOf="@id/guideline_vertical_middle"
            app:layout_constraintTop_toBottomOf="@id/feature_title" />

        <TextView
            android:id="@+id/bedrooms_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/guideline_vertical_middle"
            app:layout_constraintTop_toBottomOf="@id/bedrooms" />

        <TextView
            android:id="@+id/bathrooms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bathrooms"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toEndOf="@id/guideline_vertical"
            app:layout_constraintTop_toBottomOf="@id/total_area_value" />

        <TextView
            android:id="@+id/bathrooms_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/guideline_vertical"
            app:layout_constraintTop_toBottomOf="@id/bathrooms" />

    </android.support.constraint.ConstraintLayout>

</ScrollView>
